<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.qcadoo.maven</groupId>
        <artifactId>qcadoo-super-pom</artifactId>
        <version>0.0.1</version>
    </parent>

    <groupId>com.qcadoo.mes</groupId>
    <artifactId>mes</artifactId>
    <version>1.5-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Qcadoo MES</name>

    <description/>

    <url>https://github.com/qcadoo/mes</url>

    <organization>
        <name>Qcadoo Limited</name>
        <url>http://www.qcadoo.com/</url>
    </organization>

    <inceptionYear>2010</inceptionYear>

    <licenses>
        <license>
            <name>GNU Affero General Public License</name>
            <url>https://github.com/qcadoo/qcadoo/raw/master/licence.txt</url>
        </license>
    </licenses>

    <modules>
        <module>mes-plugins</module>
        <module>mes-application</module>
    </modules>

    <properties>
        <qcadoo.buildVersionForUser>3.1.12</qcadoo.buildVersionForUser>
        <qcadoo.version>${project.version}</qcadoo.version>
        <qcadoo.plugin.version>1.5</qcadoo.plugin.version>
        <qcadoo.maven.plugin.version>1.5-SNAPSHOT</qcadoo.maven.plugin.version>
        <profile.name>tomcat</profile.name>
    </properties>

	<dependencyManagement>
    	<dependencies>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-unit-conversion-management</artifactId>
            <version>1.5-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>xml-apis</groupId>
                    <artifactId>xml-apis</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>xml-apis</groupId>
                    <artifactId>xml-apis-ext</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>stax</groupId>
                    <artifactId>stax-api</artifactId>
                	</exclusion>
            	</exclusions>
        	</dependency>
    	</dependencies>
	</dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugin</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-localization</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-security</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-view</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-report</artifactId>
            <version>${qcadoo.version}</version>
            <exclusions>
            	<exclusion>
            	 <groupId>xml-apis</groupId>
            	 <artifactId>xml-apis</artifactId>
            	</exclusion>
            	<exclusion>
            	 <groupId>stax</groupId>
            	 <artifactId>stax-api</artifactId>
       			 </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-menu-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-user-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-dictionary-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-custom-translation</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-custom-translation-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-export</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-commons</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-testing</artifactId>
            <version>${qcadoo.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>javax.annotation</groupId>
    		<artifactId>javax.annotation-api</artifactId>
    		<version>1.3.2</version>
        </dependency>         		  
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>dev.aspectj</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.14.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <complianceLevel>21</complianceLevel>
                    <Xlint>ignore</Xlint>
                    <aspectLibraries>
                        <aspectLibrary>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-aspects</artifactId>
                        </aspectLibrary>
                        <aspectLibrary>
                            <groupId>org.springframework.security</groupId>
                            <artifactId>spring-security-aspects</artifactId>
                        </aspectLibrary>
                    </aspectLibraries>
                    <showWeaveInfo>true</showWeaveInfo>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>1.9.21.2</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        	<plugin>
    <groupId>org.openrewrite.maven</groupId>
    <artifactId>rewrite-maven-plugin</artifactId>
    <version>5.45.0</version>
    <configuration>
        <activeRecipes>
            <recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
        </activeRecipes>
        <failOnDryRunResults>false</failOnDryRunResults>
    </configuration>
    	<dependencies>
        	<dependency>
            	<groupId>org.openrewrite.recipe</groupId>
            	<artifactId>rewrite-migrate-java</artifactId>
            	<version>2.28.0</version>
       		</dependency>
    	</dependencies>
			</plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>qcadoo-releases-repository</id>
            <url>https://nexus.qcadoo.org/content/repositories/releases</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:ssh://github.com/qcadoo/mes.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/qcadoo/mes.git</developerConnection>
        <url>http://github.com/qcadoo/mes</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>qcadoo-releases-repository</id>
            <url>https://nexus.qcadoo.org/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>qcadoo-snapshots-repository</id>
            <url>https://nexus.qcadoo.org/content/repositories/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>profile</id>
            <activation>
                <property>
                    <name>profile</name>
                </property>
            </activation>
            <properties>
                <profile.name>${profile}</profile.name>
            </properties>
        </profile>
    </profiles>

</project>
